<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundGray"
        tools:context=".ui.fragment.MeetingListFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                style="@style/NoInsetToolbar">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="@dimen/toolbar_btn_width"
                        android:layout_height="@dimen/toolbar_btn_height"
                        android:id="@+id/iv_prev"
                        android:src="@drawable/arrow_left"
                        android:tint="@color/toolbarBtnColor"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_msg_prev"
                        android:text="@string/msg_toolbar_prev"
                        android:textColor="@color/toolbarBtnMsgColor"
                        android:textSize="@dimen/toolbar_btn_msg_textsize"
                        android:layout_toRightOf="@id/iv_prev"
                        android:layout_centerVertical="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_title"
                        android:textColor="@color/toolbarTitleColor"
                        android:textSize="@dimen/toolbar_title_msg_textsize"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        android:layout_width="@dimen/toolbar_btn_width"
                        android:layout_height="@dimen/toolbar_btn_height"
                        android:id="@+id/iv_next"
                        android:src="@drawable/arrow_right"
                        android:tint="@color/toolbarBtnColor"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_msg_next"
                        android:text="@string/msg_toolbar_next"
                        android:textColor="@color/toolbarBtnMsgColor"
                        android:textSize="@dimen/toolbar_btn_msg_textsize"
                        android:layout_toLeftOf="@id/iv_next"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rl_meetinglist_container"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rv_meeting_schedule"
                    android:layout_marginBottom="@dimen/height_btn_schedule_meeting"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_btn_schedule_meeting"
                    android:id="@+id/btn_schedule_meeting"
                    android:text="@string/btn_txt_schedule_meeting"
                    android:textColor="@color/btnTextColor"
                    android:background="@color/colorPrimary"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <include
                layout="@layout/layout_message"
                android:id="@+id/layout_message"
                android:visibility="gone"/>

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>